# ankh-morpork

./: .gitignore  Cargo.toml
.cargo/: config_fast_builds.toml
.github/workflows/: release.yaml
assets/: ankh.map
assets/models/: Bookcase_Full.glb  Cart.glb  Coin.glb  Goblin_Female.glb  Goblin_Male.glb  MarketStand_1.glb  MarketStand_2.glb  Skeleton_body.glb  Skeleton_head.glb
src/: main.rs
