#:tombi schema.strict = false

cargo-features = ["codegen-backend"]

[package]
name = "ankh-morpork"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { git = "https://github.com/avianphysics/avian", version = "0.6.0-dev" }
bevy = { version = "0.18", features = ["debug"] }
bevy_ahoy = { git = "https://github.com/janhohenheim/bevy_ahoy", version = "0.0.3" }
bevy_enhanced_input = "0.22.2"
bevy_trenchbroom = { git = "https://github.com/Noxmore/bevy_trenchbroom", rev = "dd52cf42f8b02800605f6c08ab0ea635b46103c8", features = [
  "physics-integration"
] }
bevy_trenchbroom_avian = { git = "https://github.com/Noxmore/bevy_trenchbroom", rev = "dd52cf42f8b02800605f6c08ab0ea635b46103c8", version = "0.13.0-dev" }
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_warn",
] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
lto = "thin"
codegen-units = 1
